# MacroVision

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260723_0001_initial_schema.py  20260723_0002_portfolio_engine.py  20260723_0003_decision_engine.py  20260724_0004_macro_data_engine.py  20260724_0005_architecture_freeze.py  20260724_0006_data_contracts.py  20260724_0007_fred_provider.py  20260724_0008_scheduled_provider_sync.py
scripts/: check.ps1  run.ps1  setup.ps1
src/macrovision/: __init__.py  api.py  config.py  contracts.py  database.py  decision_api.py  decision_models.py  decision_schemas.py  decision_services.py  errors.py  fred_provider.py  integrity.py  macro_data_api.py  macro_data_models.py  macro_data_schemas.py  macro_data_services.py  main.py  models.py  persistence_types.py  portfolio_api.py  portfolio_models.py  portfolio_schemas.py  portfolio_services.py  provider_api.py  provider_contracts.py  provider_registry.py  provider_schemas.py  provider_services.py  scheduler_models.py  scheduler_schemas.py  scheduler_services.py  schemas.py  services.py
tests/: __init__.py  conftest.py  test_contracts.py  test_decisions.py  test_fred_provider.py  test_health.py  test_investors.py  test_journals.py  test_macro_data.py  test_migrations.py  test_portfolios.py  test_postgresql_enum_migrations.py  test_scheduler.py
