[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macrovision"
version = "0.4.1"
description = "Investment Decision Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macrovision"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=macrovision --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
